--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="https://speech.uinnova.com/static/common/css/forkonme.css">
     <script type="text/javascript" src="https://speech.uinnova.com/static/release/thing3d.min.js"></script>
     <!--<script type="text/javascript" src="../../dist/thing3d.min.js"></script>-->
-    <script type="text/javascript" src="https://speech.uinnova.com/static/release/dat.gui.js"></script>
+    <script type="text/javascript" src="https://speech.uinnova.com/static/release/dat.gui.min.js"></script>
     <script type="text/javascript" src="js/schoolyard.js"></script>
     <script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
 </head>
